Maintenance
* Updated syncthing core to v0.14.54
Enhancements
* Added "Recent changes" UI, click files to open [NEW]
* Specify sync conditions differently for each folder, device [NEW]
* Added offline 'tips & tricks' content [NEW]
* UI explains why syncthing is running (or not)
Fixes
* Fixed the "battery eater"
* Android 8 and 9 support