@@ -1,0 +1,7 @@
+@echo off
+cls
+cd /d "%~dps0"
+REM 
+gradlew buildNative
+REM 
+pause
