@@ -1,0 +1,12 @@
+@echo off
+cls
+REM
+SET PATH=%PATH%;"%ProgramFiles%\Git\bin"
+SET DESIRED_SUBMODULE_VERSION=v0.14.54
+REM 
+cd /d "%~dps0\syncthing\src\github.com\syncthing\syncthing"
+REM 
+git fetch --all
+git checkout %DESIRED_SUBMODULE_VERSION%
+REM 
+pause
