@@ -1,5 +1,6 @@
 Maintenance
 * Updated syncthing core to v0.14.54
+* Fallback to http if https tls 1.2 is unavailable on Android 4.x
 Enhancements
 * Added "Recent changes" UI, click files to open [NEW]
 * Specify sync conditions differently for each folder, device [NEW]
